# todo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml  requirements.txt  run.py
docs/source/: api.rst  conf.py  index.rst
tests/: test_app.py
todo/: api.py  views.py
todo/templates/: application.html
