[tool.poetry]
name = "todo"
version = "0.1.0"
description = "This is a simple TODO application."
authors = ["Zeb Barry <zba24@uclive.ac.nz>"]
license = "The MIT License"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.1"
Flask-SQLAlchemy = "2.4.1"
Sphinx = "2.4.4"
pytest = "5.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
