[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.poetry]
name = "todo"
version = "0.1.0"
description = "This is a simple TODO application."
authors = ["Zeb Barry <zba24@uclive.ac.nz>"]
license = "The MIT License"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.1"
Flask-SQLAlchemy = "2.4.1"
SQLAlchemy = "1.3"
Sphinx = "2.4.4"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
